Move map to bottom of page

--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
         </header>
 
         <main class="main-content">
-            <!-- מפה אינטרקטיבית -->
-            <div class="map-container">
-                <div id="map"></div>
-            </div>
-
-            <!-- פאנל צדדי -->
-            <div class="side-panel">
+            <!-- פאנל עליון -->
+            <div class="top-panel">
                 <div class="welcome-section">
                     <h2>ברוכים הבאים</h2>
                     <p>מערכת זו מציגה את כל החניונים המוגנים בירושלים למקרה חירום</p>
@@ -74,6 +69,11 @@
                         <!-- כרטיסי החניונים יתווספו דינמית -->
                     </div>
                 </div>
+            </div>
+
+            <!-- מפה אינטרקטיבית בתחתית -->
+            <div class="map-container">
+                <div id="map"></div>
             </div>
         </main>
 
